[FIX] hr: fix visuals for mobile on form & kanban views
Before this commit, two visual errors were present on mobile:
- In the employee form view, the name and professions were
overlapping with the profile picture;
- In the employee kanban view, the presence logo and the
activity logo were misaligned

This commit also fixes some indentation errors.

closes odoo/odoo#109145

--- a/addons/hr/static/src/scss/hr.scss
+++ b/addons/hr/static/src/scss/hr.scss
@@ -4,10 +4,18 @@
 }
 
 .o_employee_form {
+    .o_employee_chat_btn {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-bottom: 5px;
+        @include media-breakpoint-down(md) {
+            margin-left: 0!important;
+        }
+    }
     .o_employee_avatar {
-        position: absolute;
-        top: 60px;
-        right: 10px;
+        position: relative;
+        width: fit-content;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -28,7 +36,19 @@
         }
     }
     .oe_title {
-        max-width: 75%;
+        flex: 1;
+    }
+}
+
+.o_hr_employee_kanban {
+    .o_employee_availability {
+        margin: 0 1px;
+    }
+    .o_kanban_record_bottom {
+        margin: 0 var(--KanbanRecord-padding-h);
+        .fa.fa-comments {
+            margin-bottom: 5px;
+        }
     }
 }
 
